# danger-py-plugin-example

./: LICENSE  dangerfile.py  pyproject.toml
example_danger_plugin/: __init__.py  plugin.py
