[tool.poetry]
name = "example-danger-plugin"
version = "0.1"
description = "Example Danger plugin"
authors = ["Jakub Turek <jkbturek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
danger-python = {git = "https://github.com/turekj/python.git", rev = "plugin_infrastructure"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
